--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/room-owner-signup/room-owner-signup.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/room-owner-signup/room-owner-signup.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <ng-stepper #cdkStepper [linear]="true">
-      <cdk-step [stepControl]="stepOne.stepOneForm" [optional]="true">
+      <cdk-step [stepControl]="stepOne.stepOneForm" [optional]="false">
         <ng-template cdkStepLabel>
           <div class="step-bullet"><i class="fa-solid fa-address-card"></i></div>
           <div class="step-title">Personal Details</div>
