--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
@@ -5,6 +5,22 @@
     </div>
     <div class="card-body p-3 bg-light">
       <form [formGroup]="stepOneForm" (ngSubmit)="stepOneSubmit()" autocomplete="off" novalidate #formRef="ngForm" class="Personal-Details">
+        <div class="profile-card-image-ui">
+          <div class="profile-image-container">
+            <img [src]="ProfileImage" alt="Single File Preview" class="profile-image-preview" />
+            <div class="profile-overlay"></div>
+          </div>
+          <small class="upload-instruction">JPEG, PNG. Max size: 2MB</small>
+          <div class="profile-actions">
+            <button type="button" class="btn btn-success action-btn" (click)="triggerFileInput($event)">
+              <i class="fa-solid fa-upload"></i> Upload
+            </button>
+            <button type="button" class="btn btn-danger action-btn" (click)="onDeleteClick($event)">
+              <i class="fa-solid fa-trash"></i> Delete
+            </button>
+            <input type="file" #fileInput accept="image/*" (change)="onFileChange($event)" style="display: none;" />
+          </div>
+        </div>
 
         <div class="row">
           <div class="col-md-6 mb-1">
@@ -31,6 +47,7 @@
             </span>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="lname" class="form-label ps-1">Last Name</label>
@@ -42,8 +59,12 @@
             <span class="error" *ngIf="stepOneForm.controls['DateOfBirth'].hasError('required') && formRef.submitted">
               Please enter date of birth
             </span>
+            <span class="error" *ngIf="stepOneForm.controls['DateOfBirth'].hasError('invalidDateOfBirth') && formRef.submitted">
+              Date of Birth cannot be in the future.
+            </span>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="gender" class="form-label ps-1">Gender<span class="asterisk">*</span></label>
@@ -69,6 +90,7 @@
             </span>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="secondryNumber" class="form-label ps-1">Secondary Phone Number</label>
@@ -92,8 +114,67 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="streetAddress" class="form-label ps-1">Street Address<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="streetAddress" formControlName="StreetAddress" placeholder="Enter Street Address" />
+            <span class="error" *ngIf="stepOneForm.controls['StreetAddress'].hasError('required') && formRef.submitted">Please enter street address</span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="landmark" class="form-label ps-1">Landmark</label>
+            <input type="text" class="form-control" id="landmark" formControlName="Landmark" placeholder="Enter landmark " />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="Country" (change)="loadStates($event)">
+              <option value="">Select Country</option>
+              <option *ngFor="let country of countries" [value]="country.countryCode">{{ country.countryName }}</option>
+            </select>
+            <span class="error" *ngIf="stepOneForm.controls['Country'].hasError('required') && formRef.submitted">
+              Please select country
+            </span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="state" class="form-label ps-1">State<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="State" (change)="loadCities($event)">
+              <option value="">Select state</option>
+              <option *ngFor="let state of states" [value]="state.name">{{ state.name }}</option>
+            </select>
+            <span class="error" *ngIf="stepOneForm.controls['State'].hasError('required') && formRef.submitted">
+              Please select state
+            </span>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="city" class="form-label ps-1">City<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="City">
+              <option value="">Select city</option>
+              <option *ngFor="let city of cities" [value]="city.name">{{ city.name }}</option>
+            </select>
+            <span class="error" *ngIf="stepOneForm.controls['City'].hasError('required') && formRef.submitted">
+              Please select state
+            </span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="postalCode" class="form-label ps-1">Postal Code/ZIP Code<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="postalCode" formControlName="PostalCode" placeholder="Enter Postal Code/ZIP Code" />
+            <span class="error" *ngIf="(stepOneForm.controls['PostalCode'].hasError('required')
+                                    || stepOneForm.controls['PostalCode'].hasError('minlength') 
+                                    || stepOneForm.controls['PostalCode'].hasError('maxlength')
+                                    || stepOneForm.controls['PostalCode'].hasError('pattern')) && formRef.submitted">
+              Postal code must be a 6-digit number
+            </span>
+
+          </div>
+        </div>
+
         <div class="float-end mt-4">
-          <button class="button" cdkStepperNext>Next</button>
+          <button class="button btn-next" cdkStepperNext>Next</button>
         </div>
 
       </form>
